// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-code-tabs does not fold code blocks on different levels 1`] = `
{
  "children": [
    {
      "children": [
        {
          "checked": null,
          "children": [
            {
              "children": [
                {
                  "position": Position {
                    "end": {
                      "column": 15,
                      "line": 2,
                      "offset": 15,
                    },
                    "indent": [],
                    "start": {
                      "column": 4,
                      "line": 2,
                      "offset": 4,
                    },
                  },
                  "type": "text",
                  "value": "a list here",
                },
              ],
              "position": Position {
                "end": {
                  "column": 15,
                  "line": 2,
                  "offset": 15,
                },
                "indent": [],
                "start": {
                  "column": 4,
                  "line": 2,
                  "offset": 4,
                },
              },
              "type": "paragraph",
            },
            {
              "children": [
                {
                  "type": "jsx",
                  "value": "<CodeTabs>",
                },
                {
                  "type": "jsx",
                  "value": "<CodeBlock language="plain" title="" filename="">",
                },
                {
                  "lang": "plain",
                  "meta": null,
                  "position": Position {
                    "end": {
                      "column": 7,
                      "line": 5,
                      "offset": 49,
                    },
                    "indent": [
                      4,
                      4,
                    ],
                    "start": {
                      "column": 4,
                      "line": 3,
                      "offset": 19,
                    },
                  },
                  "type": "code",
                  "value": "inside list",
                },
                {
                  "type": "jsx",
                  "value": "</CodeBlock>",
                },
                {
                  "type": "jsx",
                  "value": "</CodeTabs>",
                },
              ],
              "data": {
                "hName": "div",
                "hProperties": {
                  "className": "code-tabs-wrapper",
                },
              },
              "lang": "plain",
              "meta": null,
              "position": Position {
                "end": {
                  "column": 7,
                  "line": 5,
                  "offset": 49,
                },
                "indent": [
                  4,
                  4,
                ],
                "start": {
                  "column": 4,
                  "line": 3,
                  "offset": 19,
                },
              },
              "type": "element",
              "value": "inside list",
            },
          ],
          "position": Position {
            "end": {
              "column": 7,
              "line": 5,
              "offset": 49,
            },
            "indent": [
              1,
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "spread": false,
          "type": "listItem",
        },
      ],
      "ordered": true,
      "position": Position {
        "end": {
          "column": 7,
          "line": 5,
          "offset": 49,
        },
        "indent": [
          1,
          1,
          1,
        ],
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "spread": false,
      "start": 1,
      "type": "list",
    },
    {
      "children": [
        {
          "type": "jsx",
          "value": "<CodeTabs>",
        },
        {
          "type": "jsx",
          "value": "<CodeBlock language="plain" title="" filename="">",
        },
        {
          "lang": "plain",
          "meta": null,
          "position": Position {
            "end": {
              "column": 4,
              "line": 9,
              "offset": 76,
            },
            "indent": [
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 7,
              "offset": 51,
            },
          },
          "type": "code",
          "value": "outside list",
        },
        {
          "type": "jsx",
          "value": "</CodeBlock>",
        },
        {
          "type": "jsx",
          "value": "</CodeTabs>",
        },
      ],
      "data": {
        "hName": "div",
        "hProperties": {
          "className": "code-tabs-wrapper",
        },
      },
      "lang": "plain",
      "meta": null,
      "position": Position {
        "end": {
          "column": 4,
          "line": 9,
          "offset": 76,
        },
        "indent": [
          1,
          1,
        ],
        "start": {
          "column": 1,
          "line": 7,
          "offset": 51,
        },
      },
      "type": "element",
      "value": "outside list",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 10,
      "offset": 77,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-code-tabs does not fold code blocks split by a paragraph 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "jsx",
          "value": "<CodeTabs>",
        },
        {
          "type": "jsx",
          "value": "<CodeBlock language="python" title="" filename="">",
        },
        {
          "lang": "python",
          "meta": null,
          "position": Position {
            "end": {
              "column": 4,
              "line": 4,
              "offset": 35,
            },
            "indent": [
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "code",
          "value": "print "Hello World!"",
        },
        {
          "type": "jsx",
          "value": "</CodeBlock>",
        },
        {
          "type": "jsx",
          "value": "</CodeTabs>",
        },
      ],
      "data": {
        "hName": "div",
        "hProperties": {
          "className": "code-tabs-wrapper",
        },
      },
      "lang": "python",
      "meta": null,
      "position": Position {
        "end": {
          "column": 4,
          "line": 4,
          "offset": 35,
        },
        "indent": [
          1,
          1,
        ],
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "element",
      "value": "print "Hello World!"",
    },
    {
      "children": [
        {
          "position": Position {
            "end": {
              "column": 16,
              "line": 6,
              "offset": 52,
            },
            "indent": [],
            "start": {
              "column": 1,
              "line": 6,
              "offset": 37,
            },
          },
          "type": "text",
          "value": "some text here:",
        },
      ],
      "position": Position {
        "end": {
          "column": 16,
          "line": 6,
          "offset": 52,
        },
        "indent": [],
        "start": {
          "column": 1,
          "line": 6,
          "offset": 37,
        },
      },
      "type": "paragraph",
    },
    {
      "children": [
        {
          "type": "jsx",
          "value": "<CodeTabs>",
        },
        {
          "type": "jsx",
          "value": "<CodeBlock language="javascript" title="" filename="">",
        },
        {
          "lang": "javascript",
          "meta": null,
          "position": Position {
            "end": {
              "column": 4,
              "line": 10,
              "offset": 100,
            },
            "indent": [
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 8,
              "offset": 54,
            },
          },
          "type": "code",
          "value": "console.log("Hello World!");",
        },
        {
          "type": "jsx",
          "value": "</CodeBlock>",
        },
        {
          "type": "jsx",
          "value": "</CodeTabs>",
        },
      ],
      "data": {
        "hName": "div",
        "hProperties": {
          "className": "code-tabs-wrapper",
        },
      },
      "lang": "javascript",
      "meta": null,
      "position": Position {
        "end": {
          "column": 4,
          "line": 10,
          "offset": 100,
        },
        "indent": [
          1,
          1,
        ],
        "start": {
          "column": 1,
          "line": 8,
          "offset": 54,
        },
      },
      "type": "element",
      "value": "console.log("Hello World!");",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 11,
      "offset": 101,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-code-tabs folds two code blocks 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "jsx",
          "value": "<CodeTabs>",
        },
        {
          "type": "jsx",
          "value": "<CodeBlock language="python" title="" filename="">",
        },
        {
          "lang": "python",
          "meta": null,
          "position": Position {
            "end": {
              "column": 4,
              "line": 4,
              "offset": 35,
            },
            "indent": [
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "code",
          "value": "print "Hello World!"",
        },
        {
          "type": "jsx",
          "value": "</CodeBlock>",
        },
        {
          "type": "jsx",
          "value": "<CodeBlock language="javascript" title="" filename="">",
        },
        {
          "lang": "javascript",
          "meta": null,
          "position": Position {
            "end": {
              "column": 4,
              "line": 8,
              "offset": 83,
            },
            "indent": [
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 6,
              "offset": 37,
            },
          },
          "type": "code",
          "value": "console.log("Hello World!");",
        },
        {
          "type": "jsx",
          "value": "</CodeBlock>",
        },
        {
          "type": "jsx",
          "value": "</CodeTabs>",
        },
      ],
      "data": {
        "hName": "div",
        "hProperties": {
          "className": "code-tabs-wrapper",
        },
      },
      "lang": "python",
      "meta": null,
      "position": Position {
        "end": {
          "column": 4,
          "line": 4,
          "offset": 35,
        },
        "indent": [
          1,
          1,
        ],
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "element",
      "value": "print "Hello World!"",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 9,
      "offset": 84,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-code-tabs supports filenames 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "jsx",
          "value": "<CodeTabs>",
        },
        {
          "type": "jsx",
          "value": "<CodeBlock language="plain" title="Hello" filename="hello.txt">",
        },
        {
          "lang": "plain",
          "meta": "{tabTitle: Hello} {filename: hello.txt}",
          "position": Position {
            "end": {
              "column": 4,
              "line": 4,
              "offset": 59,
            },
            "indent": [
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "code",
          "value": "first",
        },
        {
          "type": "jsx",
          "value": "</CodeBlock>",
        },
        {
          "type": "jsx",
          "value": "<CodeBlock language="plain" title="Goodbye" filename="goodbye.txt">",
        },
        {
          "lang": "plain",
          "meta": "{tabTitle: Goodbye} {filename: goodbye.txt}",
          "position": Position {
            "end": {
              "column": 4,
              "line": 8,
              "offset": 124,
            },
            "indent": [
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 6,
              "offset": 61,
            },
          },
          "type": "code",
          "value": "second",
        },
        {
          "type": "jsx",
          "value": "</CodeBlock>",
        },
        {
          "type": "jsx",
          "value": "</CodeTabs>",
        },
      ],
      "data": {
        "hName": "div",
        "hProperties": {
          "className": "code-tabs-wrapper",
        },
      },
      "lang": "plain",
      "meta": "{tabTitle: Hello} {filename: hello.txt}",
      "position": Position {
        "end": {
          "column": 4,
          "line": 4,
          "offset": 59,
        },
        "indent": [
          1,
          1,
        ],
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "element",
      "value": "first",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 9,
      "offset": 125,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-plugin-code-tabs supports tab titles 1`] = `
{
  "children": [
    {
      "children": [
        {
          "type": "jsx",
          "value": "<CodeTabs>",
        },
        {
          "type": "jsx",
          "value": "<CodeBlock language="plain" title="Hello" filename="">",
        },
        {
          "lang": "plain",
          "meta": "{tabTitle: Hello}",
          "position": Position {
            "end": {
              "column": 4,
              "line": 4,
              "offset": 37,
            },
            "indent": [
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 2,
              "offset": 1,
            },
          },
          "type": "code",
          "value": "first",
        },
        {
          "type": "jsx",
          "value": "</CodeBlock>",
        },
        {
          "type": "jsx",
          "value": "<CodeBlock language="plain" title="Goodbye" filename="">",
        },
        {
          "lang": "plain",
          "meta": "{tabTitle: Goodbye}",
          "position": Position {
            "end": {
              "column": 4,
              "line": 8,
              "offset": 78,
            },
            "indent": [
              1,
              1,
            ],
            "start": {
              "column": 1,
              "line": 6,
              "offset": 39,
            },
          },
          "type": "code",
          "value": "second",
        },
        {
          "type": "jsx",
          "value": "</CodeBlock>",
        },
        {
          "type": "jsx",
          "value": "</CodeTabs>",
        },
      ],
      "data": {
        "hName": "div",
        "hProperties": {
          "className": "code-tabs-wrapper",
        },
      },
      "lang": "plain",
      "meta": "{tabTitle: Hello}",
      "position": Position {
        "end": {
          "column": 4,
          "line": 4,
          "offset": 37,
        },
        "indent": [
          1,
          1,
        ],
        "start": {
          "column": 1,
          "line": 2,
          "offset": 1,
        },
      },
      "type": "element",
      "value": "first",
    },
  ],
  "position": {
    "end": {
      "column": 1,
      "line": 9,
      "offset": 79,
    },
    "start": {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
